bootstrap/argocd/templates/grpcroute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: argocd-grpc
  namespace: argocd
spec:
  parentRefs:
  - name: public-gateway
    namespace: kube-system
    sectionName: https
  hostnames:
  - argocd.lajas.tech
  rules:
  - matches:
    - headers:
      - name: Content-Type
        type: RegularExpression
        value: ^application/grpc.*$
    backendRefs:
    - name: argocd-server
      port: 443
